# smalltensor

./: .gitignore  LICENSE.md  README.md  setup.cfg
.github/workflows/: main.yml
examples/: README.md  xor.py
smalltensor/: __init__.py  buffer.py  nn.py  ops.py  optim.py  tensor.py  utils.py
smalltensor/backend/: __init__.py  buffer.py  cpu.py
smalltensor/nn/: optim.py
test/: helpers.py  test_autograd.py  test_broadcast.py  test_buffer.py  test_nn.py  test_ops.py  test_optim.py  test_tensor.py  tt.py
