[metadata]
name = smalltensor
version = 0.1
author = Ba Hung Huynh
description = Tensor + Autograd library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hbhungg/smalltensor
classifiers = 
  Programming Language :: Python :: 3
  License :: MIT License

[options]
package = 
  = smalltensor
packages = find:
python_requires = >=3.8
install_requires = 
  numpy
  networkx

[options.extras_require]
test = 
  torch
  pytest
